import java.util.ArrayList;


public interface Data {

    ArrayList<Media> readFile(String fileName);

}
