import java.util.ArrayList;

public class Movie extends Media {
    Movie(String title, String releasDate, ArrayList<String> genres, String rating) {
        super(title, releasDate, genres, rating);
    }
}
